welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:4: error: ';' expected but '=' found.
	nbBiscuit:Int=0;
                     ^Poucet:6: error: ';' expected but ',' found.
		nbBiscuit = nbBiscuit + 1,
                                         ^